p3/setup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2-ingress
spec:
  rules:
  - host: "wil-playground.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wil-playground-service
            port:
              number: 8888
  - host: "argocd.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
